<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:minHeight="200dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/map_info_image"
        android:contentDescription="@string/map_info_window_image"
        android:padding="8dp"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:cropToPadding="true"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toTopOf="@id/map_info_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/map_info_title"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxWidth="400dp"
        android:padding="8dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_info_image" />

    <TextView
        android:id="@+id/map_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:maxWidth="400dp"
        android:padding="8dp"
        android:text="@string/description"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_info_title" />

    <android.support.v7.widget.CardView
        android:id="@+id/host_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_info_desc">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/host_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hosts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/host_logo"
                android:padding="8dp"
                android:src="@drawable/logo"
                app:layout_constraintLeft_toRightOf="@id/host_name_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/map_info_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/view_detail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_logo" />
</android.support.constraint.ConstraintLayout>